lesson6/k8s-log-processing/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: log-processing
  labels:
    istio-injection: enabled
